# sky

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.local  GEMINI.md  LICENSE  NOTICE.md  README.md  append_to_compiler.cjs  build.sh  build_docker_local.sh  bundle.js  flake.nix  install.sh  package-lock.json  package.json  run-test.sh  sky-compiler.cabal  test-parse.js  test-parse.ts  tsconfig.json  update_compiler.js
.claude/hooks/: sky-v1-loop.sh
.claude/prompts/: compiler-cli-lsp-audit.md  end-to-end-testing.md  ffi-boundary-docs.md  known-limitations-resolution.md  skylive-lifecycle-and-fixes.md  skyshop-and-lsp-hover.md  soundness-and-lsp-diagnostics.md
.github/workflows/: ci.yml  release.yml
app/: Main.hs
bootstrap/: embedded_runtime.go  main.go
bootstrap/runtime/: skyauth_runtime.go  skydb_runtime.go
dist_go/: app  go.mod  main.go  package.json
dist_go/runtime/: cmd.ts  interop.ts  program-react.ts  runtime.ts  sub.ts  task.ts
docs/: AUDIT_REMEDIATION.md  FFI_BOUNDARY_FIXES.md  KNOWN_LIMITATIONS.md  PRODUCTION_READINESS.md  TYPED_CODEGEN_GAPS.md  TYPED_CODEGEN_SESSION_STATE.md  V0.10.0_PR_SUMMARY.md  development.md  getting-started.md  sky-toml.md  stdlib.md
docs/compiler/: architecture.md  journey.md  pipeline.md  runtime-verification.md  v1-soundness-audit.md  versions.md
docs/design/: sky-live-components.md  sky-live-unified.md  sky-live.md
docs/errors/: error-system.md
docs/ffi/: boundary-philosophy.md  ffi-design.md  go-interop.md
docs/language/: modules.md  pattern-matching.md  syntax.md  types.md
docs/skyauth/: overview.md
docs/skydb/: overview.md
docs/skylive/: architecture.md  input-authority-protocol.md  overview.md
docs/skyui/: overview.md
docs/tooling/: cli.md  lsp.md  testing.md
examples/01-hello-world/: README.md  e2e.json  sky.toml
examples/02-go-stdlib/: README.md  sky.toml
examples/03-tea-external/: README.md  go.mod  sky.toml
examples/04-local-pkg/: README.md  sky.toml
examples/05-mux-server/: README.md  e2e.json  go.mod  sky.toml
examples/06-json/: README.md  e2e.json
examples/07-todo-cli/: README.md  e2e.json  go.mod  go.sum  sky.toml  todos.db  {}
examples/08-notes-app/: .gitignore  README.md  e2e.json  go.mod  go.sum  sky.toml
examples/09-live-counter/: README.md  e2e.json  sky-sqlite.toml  sky.toml
examples/10-live-component/: README.md  sky.toml
examples/11-fyne-stopwatch/: README.md  sky.toml
examples/12-skyvote/: README.md  e2e.json  sky.toml
examples/13-skyshop/: .env.example  README.md  e2e.json  sky.toml
examples/14-sky-compiler/: sky.toml
examples/14-task-demo/: README.md  sky.toml
examples/15-http-server/: README.md  e2e.json  sky.toml  verify.json
examples/16-skychess/: README.md  e2e.json  sky.toml  {}
examples/17-skymon/: README.md  e2e.json  sky.toml
examples/18-job-queue/: README.md  e2e.json  sky.toml
examples/19-skyforum/: README.md  sky.toml
examples/19-skyvote-ui/: sky.toml
examples/simple/: go.mod  sky.toml
examples/test_pkg/: sky.toml
ffi/: myffi.go
haskell-compiler/: sky-compiler.cabal
haskell-compiler/app/: Main.hs
haskell-compiler/ffi/: myffi.go
haskell-compiler/runtime-go/: go.mod  go.sum
haskell-compiler/test-files/: app-simple.sky  auth-test.sky  case-blank.sky  case-blank2.sky  comprehensive.sky  db-test.sky  env-test.sky  ffi-test.sky  maybe-test.sky  multiline-record.sky  path-test.sky  recursive.sky  simple-case.sky  unicode-test.sky  validate-test.sky
legacy-sky-compiler/: scripts-test-examples.sh  sky.toml
legacy-sky-compiler/bootstrap/: embedded_runtime.go  go.mod
legacy-sky-compiler/src/: LspMain.sky
legacy-sky-compiler/tools/: bootstrap.sh  sky_extract_stdlib.go  skyi_filter.go
legacy-ts-compiler/emit/: go-emitter.ts
legacy-ts-compiler/lexer/: lexer.ts
legacy-ts-compiler/live/: detect.ts  emit-live-runtime.ts
legacy-ts-compiler/lower/: lower-to-go.ts
legacy-ts-compiler/parser/: filter-layout.ts  operator-table.ts
legacy-ts-compiler/pkg/: installer.ts  manifest.ts  registry.ts
legacy-ts-compiler/stdlib/: Ui.sky
legacy-ts-compiler/types/: checker.ts  exhaustiveness.ts  patterns.ts
legacy-ts-compiler/utils/: assets.ts
runtime-go/: go.sum
runtime-go/rt/: coerce_site_test.go  coerce_test.go  db_auth.go  db_safe_test.go  dotenv.go  env_prefix.go  kernel_wrapper_parity_test.go  live.go  live_file_event_test.go  live_msg_decode_test.go  live_refresh_test.go  live_store.go  p3_4_typed_strings_test.go  rt.go  rt_narrow_dispatch_test.go  skycall_curry_test.go  stdlib_extra.go  stdlib_web.go  string_toint_test.go  validate.go
scripts/: build.sh  check-forbidden.sh  example-e2e.sh  example-sweep.sh  mem-guard.sh  test-examples.sh  verify-examples.sh
sky-compiler/runtime/: runtime.go
sky-compiler/sky-out/: main.go
sky-compiler/src/: Cli.sky  LspMain.sky  Main.sky
sky-out/: app  go.mod  go.sum  main.go  sky_parallel.go  test_app
sky-out-test/: let-after-case.sky
sky-out/skylive_rt/: sse.go
sky-stdlib/Sky/: Test.sky
sky-stdlib/Std/: Ui.sky  Ui.sky.bak
src/: Cli.sky  LspMain.sky  Main.sky  SkyTestEntry__.sky  assets.ts  ast.ts  cli.ts  compiler.ts  lexer.ts  module-graph.ts  module-resolver.ts  parser.ts  types.ts
stdlib-go/: live_init.go
templates/: CLAUDE.md
test/: Spec.hs
test-files/: add-test.sky  adt-test.sky  alias-min.sky  alias-min2.sky  alias-min3.sky  alias-simple.sky  app-simple.sky  app-test.sky  auth-test.sky  case-blank.sky  case-blank2.sky  case-concat.sky  case-test.sky  comprehensive.sky  crypto-test.sky  db-test.sky  dce-test.sky  dict-test.sky  env-test.sky  ffi-test.sky  file-safety-test.sky  higher-order.sky  html-mini.sky  html-test.sky  if-simple.sky  if-test.sky  json-pipeline-test.sky  json-test.sky  let-after-case.sky  list-test.sky  live-counter.sky  live-mini.sky  live-ticker.sky  log-test.sky  maybe-test.sky  mul-call.sky  multiline-record.sky  multiline-test.sky  negate-test.sky  negative-pattern.sky  (+28 more)
tests/: sky.toml
tools/: inspector.go  sky_dce.go  sky_ffi_gen.go  trim_imports.go
ts-compiler/: compiler.ts
(+879 files in other folders)
